src/test/ui/error-codes/E0624.stderr
error[E0624]: method `method` is private
  --> $DIR/E0624.rs:11:9
   |
LL |     foo.method(); //~ ERROR method `method` is private [E0624]
   |         ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
